chore: optimize mongodb ticket registry calls